Apply suggestions from code review

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -173,7 +173,8 @@ We recommend you use systemd timer on host system to schedule your [command]``sm
 
 [IMPORTANT]
 ====
-To access a shell inside the Server container, run [literal]``mgrctl term`` on the container host. From there, one can run the CLI tools as usual.
+To access a shell inside the Server container, run [literal]``mgrctl term`` on the container host.
+From there, run command line tools as usual.
 ====
 
 The [command]``smdba`` tool can be run in the container shell.
@@ -190,7 +191,7 @@ Regular database backups do not require any downtime.
 . Allocate permanent storage space for your backup.
   This example uses a directory located at [path]``/var/spacewalk/``.
   This becomes a permanent target for your backup, so ensure it remains accessible by your server at all times.
-. Enter in the container terminal
+. In the container terminal, enter:
 +
 ----
 mgrctl term
@@ -235,19 +236,23 @@ We recommend you schedule regular database backups for a low-traffic period, to 
 [IMPORTANT]
 ====
 Ensure you have at least three times the current database size of space available for backups.
-You can check your current database size by running [command]``mgrctl exec "df -h /var/lib/pgsql"``.
+You can check your current database size by running:
+
+----
+mgrctl exec "df -h /var/lib/pgsql"
+----
 ====
 
 
-.Procedure: Create a directory for the backup (do it only once)
-. Enter in the container terminal
+.Procedure: Creating a directory for the backup (do it only once)
+
+. In the container terminal, enter:
 +
 ----
 mgrctl term
 ----
-. In your backup location, create a directory for the backup:
-+
-As root:
+. In your backup location, create a directory for the backup.
+  As root, enter:
 +
 ----
 install -d -o postgres -g postgres -m 700 /var/spacewalk/db-backup
@@ -269,7 +274,7 @@ Description="Server backup service"
 [Service]
 ExecStart=mgrctl exec "smdba backup-hot --enable=on --backup-dir=/var/spacewalk/db-backup"
 ----
-. Create a system timer file at [path]``/etc/systemd/system/server-db-backup.timer`` with the content:
+. Create a systemd timer file at [path]``/etc/systemd/system/server-db-backup.timer`` with the content:
 +
 ----
 [Unit]
@@ -304,7 +309,7 @@ The [command]``smdba`` tool can be used to restore from backup in the case of fa
 
 
 .Procedure: Restoring from Backup
-. Enter in the container terminal
+. In the container terminal, enter:
 +
 ----
 mgrctl term
