--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -13,7 +13,7 @@ endif::[]
 
 === General
 
-* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sle-micro} 5.5 and [literal]``mgradm`` installed
+* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sle-micro} 5.5 and [literal]``mgradm`` installed.
 
 * An in-place migration from {productname} 4.3 to 5.0 is unsupported because of the change of the underlying operating system from {sles} 15 SP4 to {sle-micro} {microversion}.
 
@@ -74,7 +74,7 @@ systemctl stop postgresql
 
 === SSH Connection Preparation
 
-Pre-installing {productname} on the prepared {sle-micro} 5.5 with [litaral]``mgradm`` is not necessary. 
+Pre-installing {productname} on the prepared {sle-micro} 5.5 with [litaral]``mgradm`` is not necessary.
 The migration process will take care of the server installation.
 
 .Procedure: Preparing the SSH Connection
