typo fix via feedback

--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -33,7 +33,7 @@ registercloudguest --clean
 ----
 systemctl disable guestregister.service
 ----
-. in Microsoft Azure, there is an additional service that needs to be disbaled:
+. in Microsoft Azure, there is an additional service that needs to be disabled:
 +
 ----
 systemctl disable regionsrv-enabler-azure.timer
