added lifecycle admonition for BYOS

--- a/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
@@ -10,6 +10,14 @@ After creation:
 * use ``registercloudguest`` to register the instance with the SUSE-operated update infrastructure in the cloud framework, or
 * use the command ``SUSEConnect`` to register the system with {scc} using the entitlements you already have.
 
+.Obtaining a SUSE Manager Server Subscription for {byos}
+[IMPORTANT]
+====
+To obtain a SUSE Manager Server Lifecycle subscription, customers must send an email to susemanagerkey@suse.com, including proof of running at least 10 instances of SLES for SAP BYOS. 
+Proof can be a screenshot of the relevant section of the cloud console. 
+The subscription key is valid for one year, and customers can renew it by providing updated proof of their instances at the end of the period.
+====
+
 Connect your system to your own running RMT or {productname} infrastructure in the same way you connect systems in your data center.
 
 {byos} instances make it easier to manage extensions such as ``LTSS`` or ``kernel live-patching``.
