--- a/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
@@ -10,12 +10,12 @@ After creation:
 * use ``registercloudguest`` to register the instance with the SUSE-operated update infrastructure in the cloud framework, or
 * use the command ``SUSEConnect`` to register the system with {scc} using the entitlements you already have.
 
-.Obtaining a SUSE Manager Server Subscription
+. Obtaining a SUSE Manager Server Subscription
 [IMPORTANT]
 ====
-For a customer with 10+ PAYG SLES for SAP Applications instances and wants access to the SUMA BYOS Lifecycle subscription, you must send an email to susemanagerkey@suse.com, including proof of running at least 10 instances of SLES for SAP PAYG. 
-Proof can be a screenshot of the relevant section of the cloud console. 
-The subscription key is valid for one year, and customers can renew it by providing updated proof of their instances at the end of the period.
+For customers running 10 or more PAYG SLES for SAP Applications instances who wish to access the SUSE Manager (SUMA) BYOS Lifecycle subscription, an email must be sent to susemanagerkey@suse.com. 
+The email should include proof of at least 10 active SLES for SAP PAYG instances, such as a screenshot of the relevant section of their cloud console. 
+The subscription key is valid for one year and can be renewed by providing updated proof of the instances at the end of the subscription period.
 ====
 
 Connect your system to your own running RMT or {productname} infrastructure in the same way you connect systems in your data center.
