--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -6,6 +6,14 @@
 
 {productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems from several cloud services. Unlike traditional subscription models, {payg} does not require a long-term subscription through the SUSE Customer Center. Users can leverage images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of **managed** and **monitored** systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 
+. Obtaining a SUSE Manager Server Subscription (optional)
+[IMPORTANT]
+====
+For customers running 10 or more PAYG SLES for SAP Applications instances who also wish to access the SUSE Manager (SUMA) BYOS Lifecycle subscription, an email must be sent to susemanagerkey@suse.com. 
+The email should include proof of at least 10 active SLES for SAP PAYG instances, such as a screenshot of the relevant section of their cloud console. 
+The subscription key is valid for one year and can be renewed by providing updated proof of the instances at the end of the subscription period.
+====
+
 == Benefits for using {payg}
 
 The SUSE Manager {payg} instance offers a flexible solution tailored to the modern business landscape. Key benefits include:
