--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -72,9 +72,9 @@ Double the space if the server is an ISS Master.
 | Details
 | Recommendation
 
-| openSUSE Leap 15.5
+| {leapmicro} {microversion}
 | Clean installation, up-to-date
-| openSUSE Leap 15.5
+| {leapmicro} {microversion}
 
 | CPU
 |
