--- a/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-server.adoc
+++ b/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-server.adoc
@@ -65,7 +65,7 @@ For additional details, refer to the section on network requirements in the Inst
 . Locate the {productname} {productnumber} Server installation media at https://www.suse.com/download/suse-manager/.
 . You will need an account with {scc} and must be logged in to download the ISO.
 . Download the following file: [filename]``SUSE-Manager-Server.x86_64-SelfInstall.raw.xz`` 
-. Prepare a USB fash disk or DVD for installation.
+. Prepare a USB flash disk or DVD for installation.
 . Insert a DVD or a bootable USB stick containing the installation image for {productname} {productnumber}.
 . Boot or reboot your system.
 +
