Manager 4.3: Clarified VM installation instructions (#3318)
* Clarified VM installation instructions in Installation and Upgrade
https://github.com/SUSE/spacewalk/issues/25106

* cont.

* resolve conflict

* fix internal link, now: proc.minimal.susemgr.prep

* cont.

* Apply suggestions from code review

Co-authored-by: Ornela Marić <omaric@suse.com>

* Update .changelog

---------

Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -69,10 +69,10 @@ Create a virtual machine with three additional virtual disks required for the {p
 . Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
   Confirm with btn:[Forward].
 . Set the name of your VM and select the [guimenu]``Customize configuration before install`` check box.
-. With the [guimenu]``Network selection`` drop-down menu select the configured bridge device.
+. From the [guimenu]``Network selection`` drop-down menu select the configured bridge device.
 . Confirm with btn:[Finish].
 . In the overview dashboard, at the bottom of the left navigation bar, click btn:[Add Hardware] to create additional virtual disks with the following specifications.
-  These disks will be partitioned and mounted in <<proc.sumavm.susemgr.prep>>.
+  These disks will be partitioned and mounted in <<proc.minimal.susemgr.prep>>.
 +
 
 [NOTE]
