--- a/modules/specialized-guides/pages/large-deployments/hub-api.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-api.adoc
@@ -4,11 +4,12 @@
 
 Make sure the ``hub-xmlrpc-api`` service is started:
 
+// CHECKIT!
 ----
-systemctl start hub-xmlrpc-api
+mgrctl exec -ti -- systemctl start hub-xmlrpc-api
 ----
 
-Once it is running, connect to the service at port 2830 using any XMLRPC-compliant client libraries.
+When it is running, connect to the service at port 2830 using any XMLRPC-compliant client libraries.
 
 For examples, see xref:specialized-guides:large-deployments/hub-auth.adoc[].
 
