--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -31,8 +31,6 @@ If there is no extra parameter or option available to specify intermediate CAs, 
 By default, {productname} uses a self-signed certificate.
 After you have completed the initial setup, you can replace the default certificate with an imported certificate.
 
-
-
 .Procedure: Import Certificates on a New {productname} Server
 
 . Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
@@ -69,6 +67,12 @@ Certificates signed with different CAs do not match.
 
 
 == Replace Certificates
+
+
+[IMPORTANT]
+====
+Use [literal]``mgrctl term`` before running steps inside the server container.
+====
 
 You can replace active certificates on your {productname} installation with a new certificate.
 To replace the certificates, you can replace the installed CA certificate with the new CA, and then update the database.
