--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -71,7 +71,8 @@ Certificates signed with different CAs do not match.
 
 [IMPORTANT]
 ====
-Use [literal]``mgrctl term`` before running steps inside the server container.
+The following procedure needs to run inside of the container. 
+Use [literal]``mgrctl term`` to open a terminal in the container before you execute it.
 ====
 
 You can replace active certificates on your {productname} installation with a new certificate.
