lack of reverse tunnel
https://github.com/SUSE/spacewalk/issues/25534

--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -6,6 +6,11 @@ SSH Push ([literal]``ssh-push``) is used in environments where Salt clients cann
 In this environment, clients are located in a firewall-protected zone called a DMZ.
 No system within the DMZ is authorized to open a connection to the internal network  where the {productname} Server is located.
 
+SSH Push opens a tunnel only from {productname} to the client, but the reverse channel goes directly.
+Such a scenario might not work everywhere.
+Therefore also SSH Push (with tunnel) is available as contact method.
+That also opens a reverse tunnel and thus you can communicate through all firewalls which otherwise might block the connection from client to server.
+
 SSH Push is also to use if installing a daemon agent on clients is not possible.
 
 [WARNING]
