fixed also containerization related parts

--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -80,6 +80,10 @@ These parameters are configured in menu:Systems[Bootstrapping].
 You can also configure persistent parameters that are used system-wide, including the sudo user to access the system as an unprivileged user instead of as root.
 
 
+[IMPORTANT]
+====
+Use [literal]``mgrctl term`` before running steps inside the server container.
+====
 
 .Procedure: Configuring unprivileged SSH access
 . Ensure you have the latest [path]``spacewalk-taskomatic`` and [path]``spacewalk-certs-tools`` packages installed on the {productname} Server.
@@ -111,9 +115,7 @@ ssh_push_sudo_user = <user>
 
 
 After changing this configuration parameter you must restart services
-such as [systemitem]``salt-secrets-config.service``,
-[systemitem]``tomcat.service``, and
-[systemitem]``taskomatic.service``.
+such as [systemitem]``salt-secrets-config.service``, [systemitem]``tomcat.service``, and [systemitem]``taskomatic.service``.
 To cover all needed services, it is the best to restart the {productname} Server as root:
 
 ----
