--- a/modules/client-configuration/pages/contact-methods-saltssh-tunnel.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh-tunnel.adoc
@@ -6,11 +6,11 @@ SSH Push (with tunnel) ([literal]``ssh-push-tunnel``) is used in environments wh
 In this environment, clients are located in a firewall-protected zone called a DMZ.
 No system within the DMZ is authorized to open a connection to the internal network, including the {productname} Server.
 
-This SSH method creates an encrypted tunnel from the {productname} Server on the internal network to the clients located on the DMZ.
-After all actions and events are executed, the tunnel is closed.
+// CHECKIT: Maybe, we can delete the following sentence.  It is already
+// described in the second "important" admonition
+In other words: SSH Push (with tunnel) also creates a reverse tunnel from the client to the {productname} Server, not only from the server to the client.
 
 The server uses SSH to contact the clients at regular intervals, checking in and performing scheduled actions and events.
-
 
 [IMPORTANT]
 ====
@@ -26,6 +26,12 @@ In other words, access is only possible if the session is initiated by the serve
 All package managing operations on the client can be performed from the server side only.
 ====
 
+
+[IMPORTANT]
+====
+Use [literal]``mgrctl term`` before running steps inside the server container.
+====
+
 For tunneling connections via SSH, a port number is required for tunneling via HTTPS.
 The port number used by default is `1233`.
 To overwrite it, you can add a custom port numbers greater than 1024 to [path]``/etc/rhn/rhn.conf``:
@@ -34,17 +40,20 @@ To overwrite it, you can add a custom port numbers greater than 1024 to [path]``
 ssh_push_port_https = high_port
 ----
 
-After changing this configuration parameter you must restart services
-such as [systemitem]``salt-secrets-config.service``,
-[systemitem]``tomcat.service``, and
-[systemitem]``taskomatic.service``.  To cover all needed services, it
-is the best to restart [command]``spacewalk-service`` as root:
+After changing this configuration parameter you must restart services such as [systemitem]``salt-secrets-config.service``, [systemitem]``tomcat.service``, and
+[systemitem]``taskomatic.service``.
+To cover all needed services, it is the best to restart the {productname} Server as root:
 
 ----
-spacewalk-service restart
+mgradm restart
 ----
 
 
+
+[IMPORTANT]
+====
+Use [literal]``mgrctl term`` before running steps inside the server container.
+====
 
 For security reasons, you might want to use sudo with SSH, to access the system as an unprivileged user instead of as root.
 
@@ -77,16 +86,13 @@ ssh_push_sudo_user = <user>
 ----
 
 
-After changing this configuration parameter you must restart services
-such as [systemitem]``salt-secrets-config.service``,
-[systemitem]``tomcat.service``, and
-[systemitem]``taskomatic.service``.  To cover all needed services, it
-is the best to restart [command]``spacewalk-service`` as root:
+After changing this configuration parameter you must restart services such as [systemitem]``salt-secrets-config.service``, [systemitem]``tomcat.service``, and
+[systemitem]``taskomatic.service``.
+To cover all needed services, it is the best to restart the {productname} Server as root:
 
 ----
-spacewalk-service restart
+mgradm restart
 ----
-
 
 
 You need to use the {webui} or API to register these clients with the {productname} Server.
