--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -114,8 +114,7 @@ ssh_push_sudo_user = <user>
 ----
 
 
-After changing this configuration parameter you must restart services
-such as [systemitem]``salt-secrets-config.service``, [systemitem]``tomcat.service``, and [systemitem]``taskomatic.service``.
+After changing this configuration parameter you must restart services such as [systemitem]``salt-secrets-config.service``, [systemitem]``tomcat.service``, and [systemitem]``taskomatic.service``.
 To cover all needed services, it is the best to restart the {productname} Server as root:
 
 ----
