Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
@@ -79,7 +79,7 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 
 
 
-You will deploy the peripheral servers with [command]``mgradm``.
+Deploy the peripheral servers with [command]``mgradm``.
 For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
 
 
