--- a/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
@@ -11,10 +11,17 @@ To set up a Hub installation, you require:
 
 
 
+[[lsd-hub-reqs-server]]
 == Hub Server
 
 Deploy the central {productname} Server, which acts as the Hub Server, with the [command]``mgradm`` command.
 Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
+For example:
+
+----
+mgradm install podman suma.example.com --hubxmlrpc-replicas 1
+----
+
 For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
 
 [NOTE]
