--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
@@ -16,9 +16,9 @@ Self trusted GPG keys are not migrated.
 GPG keys that are trusted in the RPM database only are not migrated.
 Thus synchronizing channels with [command]``spacewalk-repo-sync`` can fail.
 
-The administrator must migrate these keys manually from the 4.3 installation to the container host after the actual server migration.
+The administrator must migrate these keys manually from the previous Uyuni installation to the container host after the actual server migration.
 
-1. Copy the keys from the 4.3 server to the container host of the new server.
+1. Copy the keys from the previous Uyuni server to the container host of the new server.
 2. Later, add each key to the migrated server with the command [command]``mgradm gpg add <PATH_TO_KEY_FILE>``.
 ====
 
